--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,92 +1,215 @@
+:root {
+    --primary-text-color: rgb(198, 158, 198); 
+    --secondary-text-color: blueviolet;
+    --box-shadow-color: #777;
+    --tertiary-color: rgb(70, 7, 109);
+    --feature-color: rgb(87, 140, 246);
+    --img-bg-color: whitesmoke;
+}
+
 body {
-    margin: 0;
+    margin: 5% auto;
     padding: 0;
     box-sizing: border-box;
+    width: 80%;
+    font-size: 14px;
 }
 
 .mytitle {
-    box-shadow: 0px 2px 4px #777;
+    display: flex; /* center */
+    align-items: center; /* center */
+    box-shadow: 0px 2px 4px var(--box-shadow-color);
     padding: 10px;
-    border-radius: 7px;
+    /* border-radius: 20px; */
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px ;
+    border-left: 2px solid var(--tertiary-color);
     margin: 20px;
 
    &:before {
     content: "";
-    border-left: 1px solid blueviolet;
-    padding-right: 10px ;
+    /* border-left: 1px solid var(--primary-text-color);
+    padding-right: 10px ; */
    }
 
    &::after {
     content: "Student's Bio";
-    color: blueviolet;
+    color: var(--secondary-text-color);
+    margin: 0 auto;  /* center */
    }
 }
 
 .myicon {
-    color: blue;
-    border: 1px solid pink;
+    color: var(--tertiary-color);
     padding: 10px;
     border-radius: 50%;
-    background-color: blanchedalmond;
+    background-color: var(--primary-text-color);
 }
+/* ===== xxxxx ===== */
 
-.aboutme{
-    position: relative;
-    /* border-left: 2px solid green; */
-    border-bottom: 2px solid green;
-    padding-left: 20px;
-    padding-bottom: 20px;
+.img-shape {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid var(--box-shadow-color);
+    background-color: var(--box-shadow-color);
+    border-radius: 20px;
     margin: 20px;
-    /* border-bottom-left-radius: 700px; */
+}
 
-    &:before{
-    }
-    &:after{
-        content: "Hey, I am Hnin Nu, Yangon. I love coding and coding.Now I am coding on HTML,CSS and Javascript. But I am going to build Student's Bio page.";
-        color: blueviolet;
-    }
-}
-.mypen{
-    position: absolute;
-    color: blue;
-    font-size: 22px;
-    left: -10px;
-    top: -4px;
-}
 .myimage{
     --shape:50% 0%,100% 38%, 82% 100%, 18% 100%, 0% 38%;
     width: 200px;
-    /* border-radius: 50%; */
     /* height: 200px; */
     clip-path: polygon(var(--shape));
-    background-color: #9A8406;
+    /* background-color: var(--feature-color); */
     /* padding: 30px; */
     cursor: pointer;
-    margin-left: 25%;
+    margin: 10px;
+    /* transform: scaleX(-1); */
+}
+/* ===== xxxxx ===== */
+
+/* about me */
+.aboutme{
+    position: relative;
+    border-left: 2px solid var(--feature-color);
+    padding-left: 20px;
+    margin: 20px;
+    color: var(--secondary-text-color);
+
+    &:before{
+
+    }
+    &:after{
+        content: "Hey, I am Hnin Nu, Yangon. I love coding and coding.Now I am coding on HTML,CSS and Javascript. What I know is 'HTML' is like a structure of building, 'CSS' is like coloring and putting furniture and things like that, and 'JavaScript' is like switching on and off the lights etc. This is my first Student's Bio page built with my little knowledge. Thanks for your support!";
+        color: blueviolet;
+    }
+    &::first-line {
+        text-transform: uppercase;
+        color: var(--tertiary-color);
+        font-family: 'Times New Roman',serif;
+        font-weight: 500;
+    }
+    &::first-letter {
+        font-size: 45px;
+        font-weight: 500;
+        color: var(--tertiary-color);
+        font-family: cursive;
+        float: left;
+        margin-top: -20px;
+        padding-right: 3px;
+        margin-bottom: -20px;
+    }
+
 }
 
+.mypen{
+    position: absolute;
+    color: var(--tertiary-color);
+    font-size: 22px;
+    left: -10px;
+    top: -4px;
+    display: inline-block;
+    transform: scaleX(-1); /* Flips the icon horizontally */
+}
+
+/* ===== xxxxx ===== */
+
+/* Contact Me */
+
 .mycontact {
-    margin: 10px;
-    border: 1px solid #777;
-    padding: 30px;
-    border-top-right-radius: 50px;
-    border-bottom-right-radius: 50px;
-    background-color: ;
-    padding: 30px;
+    margin: 10px auto;
+    width: 75%;
+    box-shadow: 1px 0px 2px var(--box-shadow-color);
+    border-radius: 15px 0px 15 px 0px;
+    padding: 10px;
+}
+
+.mycontact a {
+    text-decoration: none;
+    color: var(--secondary-text-color);
+    padding-left: 10px;
+    &:hover {
+        color: var(--tertiary-color);
+    }
+}
+
+.contact-info {
+    background-color: rgba(216, 214, 211, 0.482);
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
 }
 
 .email {
-    color: whitesmoke;
-    /* box-shadow: 0px 1px 2px whitesmoke; */
-    width: 100%;
+    color: var(--tertiary-color);
     padding: 7px;
-    background-color: #777;
-
-
+    &:before {
+        border-top-left-radius: 50px;
+        border-bottom-left-radius: 50px;
+        background-color: rgba(140, 139, 137, 0.482);
+        padding: 3px 12px 3px 5px;
+        margin-left: -16px;
+        padding: 6.5px;
+    }
 }
 
+.address {
+    color: var(--tertiary-color);
+    padding: 7px;
+    &:before {
+        border-top-left-radius: 50px;
+        border-bottom-left-radius: 50px;
+        background-color: rgba(140, 139, 137, 0.482);
+        padding: 3px 12px 3px 5px;
+        margin-left: -16px;
+        padding: 6.5px;
+    }
+}
 
+.telephone {
+    color: var(--tertiary-color);
+    padding: 7px;
+    &:before {
+        border-top-left-radius: 50px;
+        border-bottom-left-radius: 50px;
+        background-color: rgba(140, 139, 137, 0.482);
+        padding: 3px 12px 3px 5px;
+        margin-left: -16px;
+        padding: 6.5px;
+    }
+}
 
+.github {
+    color: var(--tertiary-color);
+    padding: 7px;
+    &:before {
+        border-top-left-radius: 50px;
+        border-bottom-left-radius: 50px;
+        background-color: rgba(140, 139, 137, 0.482);
+        padding: 3px 12px 3px 5px;
+        margin-left: -16px;
+        padding: 6.5px;
+    }
+}
 
+/* ===== xxxxx ===== */
 
+/* footer */
 
+footer {
+    box-shadow: 0px 2px 4px var(--box-shadow-color);
+    padding: 5px;
+    border-radius: 5px;
+    margin-top: 20px;
+    text-align: center;
+    margin-left:20px ;
+}
+
+footer p {
+    color: var(--secondary-text-color);
+}
+
+footer p span {
+    color: var(--tertiary-color);
+}
